# course_drf

./: .env.sample  Dockerfile  README.md  docker-compose.yaml  pyproject.toml  requirements.txt
config/: settings.py  urls.py
habits/: models.py  paginations.py  serializer.py  services.py  tasks.py  tests.py  urls.py  validators.py  views.py
habits/management/commands/: test_tg.py
habits/migrations/: 0001_initial.py  0002_alter_habit_time.py  0003_alter_habit_periodicity.py  0004_alter_habit_associated_habit.py
users/: models.py  permissions.py  serializer.py  urls.py  views.py
users/management/commands/: csu.py
users/migrations/: 0001_initial.py  0002_user_t_chat_id.py  0003_remove_user_t_chat_id_user_telegram_chat_id.py
